--- a/index.html
+++ b/index.html
@@ -3,10 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>ReadableCode</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f8f8;
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+        header {
+            background-color: #4C6375;
+            color: #F8F8F8;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        section {
+            background-color: #fff;
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 5px;
+        }
+        h1, h2 {
+            color: #4C6375;
+        }
+        h3 {
+            color: #825f87;
+        }
+        p {
+            text-align: justify;
+            color: #333;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        footer {
+            margin-top: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to my GitHub Page</h1>
-    <p>This is a sample GitHub Page.</p>
+    <header>
+        <h1>ReadableCode</h1>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>
+            Greetings! I'm a passionate developer dedicated to crafting elegant and efficient solutions to complex challenges. My current endeavors reflect my commitment to enhancing usability and bridging gaps in various software ecosystems. Here's a glimpse into my ongoing projects:
+        </p>
+    </section>
+
+    <section>
+        <h2>Current Projects</h2>
+        <ul>
+            <li>
+                <h3>Sync Application for Removable Storage</h3>
+                <p>
+                    I'm developing a synchronization application tailored for removable storage. This application ensures seamless syncing of sensitive directories, such as Git repositories, while handling line-ending conversions, local discovery, and sync change management. Additionally, I'm incorporating the option to symlink externally post-sync.
+                </p>
+            </li>
+            <!-- Add more list items (li) with similar format for other projects. -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Collaboration and Engagement</h2>
+        <p>
+            I'm enthusiastic about collaborating with fellow developers and enthusiasts on these projects. Whether you're interested in contributing, have questions, or would like to explore potential synergies, please don't hesitate to reach out. Let's join forces to drive innovation and create impactful solutions together.
+        </p>
+        <p>
+            Feel free to connect with me if you're intrigued by any of these initiatives. Your insights and contributions are highly valued!
+        </p>
+    </section>
+
+    <footer>
+        <p>© 2023 ReadableCode</p>
+    </footer>
 </body>
 </html>
