--- a/index.html
+++ b/index.html
@@ -69,7 +69,37 @@
                     I'm developing a synchronization application tailored for removable storage. This application ensures seamless syncing of sensitive directories, such as Git repositories, while handling line-ending conversions, local discovery, and sync change management. Additionally, I'm incorporating the option to symlink externally post-sync.
                 </p>
             </li>
-            <!-- Add more list items (li) with similar format for other projects. -->
+            <li>
+                <h3>Dotfile Sync Application</h3>
+                <p>
+                    My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. The goal is to achieve a consistent experience across platforms.
+                </p>
+            </li>
+            <li>
+                <h3>Unified Terminal Experience</h3>
+                <p>
+                    I'm striving to unify the software experience across Android, Windows, and Linux platforms for my terminal emulation. This initiative aims to streamline workflows and enhance productivity.
+                </p>
+            </li>
+            <li>
+                <h3>DIY Pocket Laptop</h3>
+                <p>
+                    My ongoing project involves building a do-it-yourself pocket laptop. This laptop is designed for remote accessibility over Tailscale, VNC, and a built-in KVM. I'm excited to create a powerful yet compact solution for on-the-go computing.
+                </p>
+            </li>
+            <li>
+                <h3>Portable Rack Solution</h3>
+                <p>
+                    I'm designing a cost-effective and user-friendly portable rack that can be seamlessly integrated into off-brand Pelican cases. This endeavor combines practicality with portability for a variety of applications.
+                </p>
+            </li>
+            <li>
+                <h3>Pocketable Laptop Enclosure for Galaxy Z Fold 4</h3>
+                <p>
+                    As part of my innovative pursuits, I'm working on a pocketable laptop-type enclosure tailored for the Galaxy Z Fold 4. This project aims to maximize the potential of cutting-edge hardware while ensuring a compact form factor.
+                </p>
+            </li>
+
         </ul>
     </section>
 
