--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@
             <li>
                 <h3>Dotfile Sync Application</h3>
                 <p>
-                    My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. The goal is to achieve a consistent experience across platforms.
-                </p>
-            </li>
-            <li>
-                <h3>Unified Terminal Experience</h3>
-                <p>
-                    I'm striving to unify the software experience across Android, Windows, and Linux platforms for my terminal emulation. This initiative aims to streamline workflows and enhance productivity.
+                    My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. This will also pull configurations over SSH or SCP from devices that generally dont support symlinking into a git repo like my router and unraid server. The goal is to achieve a consistent experience across platforms.
                 </p>
             </li>
             <li>
@@ -96,7 +90,7 @@
             <li>
                 <h3>Pocketable Laptop Enclosure for Galaxy Z Fold 4</h3>
                 <p>
-                    As part of my innovative pursuits, I'm working on a pocketable laptop-type enclosure tailored for the Galaxy Z Fold 4. This project aims to maximize the potential of cutting-edge hardware while ensuring a compact form factor.
+                    As part of my pursuits, I'm working on a pocketable laptop-type enclosure tailored for the Galaxy Z Fold 4. This project aims to maximize the potential of cutting-edge hardware while ensuring a compact form factor.
                 </p>
             </li>
 
