--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
         <h2>Current Projects</h2>
         <ul>
             <li>
+                <button class="accordion">Terminal Based Kanban Board Using Linux Commands for Manipulation</button>
+                <div class="panel">
+                    <p>I'm developing a terminal-based Kanban board that leverages Linux commands for manipulation. This project aims to streamline task management and enhance productivity by providing a seamless interface for organizing and tracking tasks.</p>
+                </div>
+            </li>
+            <li>
+                <button class="accordion">Rust based data tool pack to allow for data science and analytics to make use of the Rust language</button>
+                <div class="panel">
+                    <p>I'm working on a Rust-based data tool pack that enables data science and analytics professionals to leverage the Rust language. This initiative seeks to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
+                </div>
+            </li>
+            <li>
                 <button class="accordion">Sync Application for Removable Storage</button>
                 <div class="panel">
                     <p>I'm developing a synchronization application tailored for removable storage. This application ensures seamless syncing of sensitive directories, such as Git repositories, while handling line-ending conversions, local discovery, and sync change management. Additionally, I'm incorporating the option to symlink externally post-sync.</p>
