update current projects

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 </div>
             </li>
             <li>
-                <button class="accordion">Rust based data tool pack to allow for data science and analytics to make use of the Rust language</button>
+                <button class="accordion">Rust and Go based data tool packs to allow for data science and analytics similar to my python libraries</button>
                 <div class="panel">
-                    <p>I'm working on a Rust-based data tool pack that enables data science and analytics professionals to leverage the Rust language. This initiative seeks to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
+                    <p>I'm working on a Go-based and a Rust-based data tool pack that enables data science and analytics professionals to leverage the Rust language. This initiative seeks to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
                 </div>
             </li>
             <li>
