--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
         <h2>Current Projects</h2>
         <ul>
             <li>
+                <button class="accordion">A 2D game written in C# using the Unity engine</button>
+                <div class="panel">
+                    <p>I'm developing a 2D game with my wife using C# and the Unity engine. This project aims to showcase my creativity and programming skills while exploring the intricacies of game development. I'm excited to bring this vision to life and create an engaging gaming experience.</p>
+                </div>
+            </li>
+            <li>
                 <button class="accordion">Terminal Based Kanban Board Using Linux Commands for Manipulation</button>
                 <div class="panel">
                     <p>I'm developing a terminal-based Kanban board that leverages Linux commands for manipulation. This project aims to streamline task management and enhance productivity by providing a seamless interface for organizing and tracking tasks.</p>
