--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <li>
                 <button class="accordion">A 2D game written in C# using the Unity engine</button>
                 <div class="panel">
-                    <p>I'm developing a 2D game with my wife using C# and the Unity engine. This project aims to showcase my creativity and programming skills while exploring the intricacies of game development. I'm excited to bring this vision to life and create an engaging gaming experience.</p>
+                    <p>I'm developing a 2D game with my wonderful wife using C# and the Unity engine. This project aims to showcase my creativity and programming skills while exploring the intricacies of game development. I'm excited to bring this vision to life and create an engaging gaming experience.</p>
                 </div>
             </li>
             <li>
