--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </li>
             <li>
-                <button class="accordion">Rust and Go based data tool packs to allow for data science and analytics similar to my python libraries</button>
+                <button class="accordion">Python, Rust and Go based data tool packs to allow for data science and analytics without all the setup</button>
                 <div class="panel">
                     <p>I'm working on a Go-based and a Rust-based data tool pack that enables data science and analytics professionals to leverage the Rust language. This initiative seeks to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
                 </div>
