update current projects

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            Greetings! I'm a passionate developer dedicated to crafting elegant and efficient solutions to complex challenges. My current endeavors reflect my commitment to enhancing usability and bridging gaps in various software ecosystems. Here's a glimpse into my ongoing projects:
+            Greetings! I am a passionate developer dedicated to automation and documentation-as-code type solutionts to issues I
+            find interesting. These are my personal projects and this account only hold my non-professional codebases. Please
+            comment, fork and contribute as you see fit. I am always looking for ways to improve my code and learn new things.
         </p>
     </section>
 
@@ -100,51 +102,53 @@
         <h2>Current Projects</h2>
         <ul>
             <li>
-                <button class="accordion">A 2D game written in C# using the Unity engine</button>
+                <button class="accordion">Python, Rust and Go based data tool packs to allow for data science and analytics without all the setup</button>
                 <div class="panel">
-                    <p>I'm developing a 2D game with my wonderful wife using C# and the Unity engine. This project aims to showcase my creativity and programming skills while exploring the intricacies of game development. I'm excited to bring this vision to life and create an engaging gaming experience.</p>
+                    <p>I'm working on Python, Rust and Go based data tool packs that enable data science and analytics professionals to access
+                    different platforms (e.g. Snowflake, RDS, AWS S3, Vault, Databricks) easily without all the setup. This initiative seeks
+                    to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
                 </div>
             </li>
             <li>
                 <button class="accordion">Terminal Based Kanban Board Using Linux Commands for Manipulation</button>
                 <div class="panel">
-                    <p>I'm developing a terminal-based Kanban board that leverages Linux commands for manipulation. This project aims to streamline task management and enhance productivity by providing a seamless interface for organizing and tracking tasks.</p>
-                </div>
-            </li>
-            <li>
-                <button class="accordion">Python, Rust and Go based data tool packs to allow for data science and analytics without all the setup</button>
-                <div class="panel">
-                    <p>I'm working on a Go-based and a Rust-based data tool pack that enables data science and analytics professionals to leverage the Rust language. This initiative seeks to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
-                </div>
-            </li>
-            <li>
-                <button class="accordion">Sync Application for Removable Storage</button>
-                <div class="panel">
-                    <p>I'm developing a synchronization application tailored for removable storage. This application ensures seamless syncing of sensitive directories, such as Git repositories, while handling line-ending conversions, local discovery, and sync change management. Additionally, I'm incorporating the option to symlink externally post-sync.</p>
+                    <p>I'm developing a terminal-based Kanban board that leverages Linux-like commands for manipulation. This project aims to
+                    streamline task management and enhance productivity by providing a seamless interface for organizing and tracking tasks.</p>
                 </div>
             </li>
             <li>
                 <button class="accordion">Dotfile Sync Application</button>
                 <div class="panel">
-                    <p>My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. This will also pull configurations over SSH or SCP from devices that generally dont support symlinking into a git repo like my router and unraid server. The goal is to achieve a consistent experience across platforms.</p>
+                    <p>My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to
+                    non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. This will also pull configurations
+                    over SSH or SCP from devices that generally dont support symlinking into a git repo like my router and unraid server.
+                    The goal is to achieve a consistent experience across platforms.</p>
                 </div>
             </li>
             <li>
-                <button class="accordion">DIY Pocket Laptop</button>
+                <button class="accordion">A Girl's Guide to Georgetown</button>
                 <div class="panel">
-                    <p>My ongoing project involves building a do-it-yourself pocket laptop. This laptop is designed for remote accessibility over Tailscale, VNC, and a built-in KVM. I'm excited to create a powerful yet compact solution for on-the-go computing.</p>
+                    <p>This project provides high school students in Georgetown, Texas, with a structured backend while allowing them full
+                    creative control over the frontend. The backend, built in Go with Fiber, dynamically serves pages without requiring
+                    container rebuilds. It is deployed via Docker Compose on a Linux server, reverse-proxied through SWAG, and managed with
+                    Cloudflare and DuckDNS. Students handle the HTML, CSS, and JavaScript, ensuring they can iterate freely without backend
+                    constraints. This setup fosters student-led development while maintaining a stable and scalable foundation.</p>
                 </div>
             </li>
             <li>
-                <button class="accordion">Portable Rack Solution</button>
+                <button class="accordion">Sync Application for Removable Storage</button>
                 <div class="panel">
-                    <p>I'm designing a cost-effective and user-friendly portable rack that can be seamlessly integrated into off-brand Pelican cases. This endeavor combines practicality with portability for a variety of applications.</p>
+                    <p>I'm developing a synchronization application tailored for removable storage. This application ensures seamless syncing
+                    of sensitive directories, such as Git repositories, while handling line-ending conversions, local discovery, and sync
+                    change management. Additionally, I'm incorporating the option to symlink externally post-sync.</p>
                 </div>
             </li>
             <li>
-                <button class="accordion">Pocketable Laptop Enclosure for Galaxy Z Fold 4</button>
+                <button class="accordion">A 2D game written in C# using the Unity engine</button>
                 <div class="panel">
-                    <p>As part of my pursuits, I'm working on a pocketable laptop-type enclosure tailored for the Galaxy Z Fold 4. This project aims to maximize the potential of cutting-edge hardware while ensuring a compact form factor.</p>
+                    <p>I'm developing a 2D game with my wonderful wife using C# and the Unity engine. This project aims to showcase my
+                    creativity and programming skills while exploring the intricacies of game development. I'm excited to bring this vision
+                    to life and create an engaging gaming experience. This one is not open source yet.</p>
                 </div>
             </li>
         </ul>
@@ -153,10 +157,13 @@
     <section id="collaborate">
         <h2>Collaboration and Engagement</h2>
         <p>
-            I'm enthusiastic about collaborating with fellow developers and enthusiasts on these projects. Whether you're interested in contributing, have questions, or would like to explore potential synergies, please don't hesitate to reach out. Let's join forces to drive innovation and create impactful solutions together.
+            I'm enthusiastic about collaborating with fellow developers and enthusiasts on these projects. Whether you're interested
+            in contributing, have questions, or would like to explore potential synergies, please don't hesitate to reach out. Let's
+            join forces to drive innovation and create impactful solutions together.
         </p>
         <p>
-            Feel free to connect with me if you're intrigued by any of these initiatives. Your insights and contributions are highly valued!
+            Feel free to connect with me if you're intrigued by any of these initiatives. Your insights and contributions are highly
+            valued!
         </p>
     </section>
 
