add project description

--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
                 </div>
             </li>
             <li>
+                <button class="accordion">AI-Powered eBook Organizer (Offline-First) ▼</button>
+                <div class="panel">
+                    <p>A smart eBook renaming and organization tool that processes messy ebook folders and uses a local large language model
+                    (no internet or accounts required) to identify metadata like author, series, series order, and title. It restructures
+                    your library into a clean, nested format by author and series. Built for full local use, but easily swappable to OpenAI
+                    or other APIs if desired.</p>
+                    <a href="https://github.com/ReadableCode/Book-Bot">Check it out</a>
+                </div>
+            </li>
+            <li>
                 <button class="accordion">Dotfile Sync Application ▼</button>
                 <div class="panel">
                     <p>My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to
