--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            Greetings! I am a passionate developer dedicated to automation and documentation-as-code type solutionts to issues I find interesting. These are my personal projects and this account only holds my non-professional codebases. Please comment, fork and contribute as you see fit. I am always looking for ways to improve my code and learn new things.
+            Greetings! I am a passionate developer dedicated to automation and modular solutions to issues I find
+            interesting. These
+            are my personal projects and this account only holds my non-professional codebases. Please comment, fork and
+            contribute
+            as you see fit. I am always looking for ways to improve my code and learn new things.
         </p>
     </section>
 
@@ -101,34 +105,59 @@
             <li>
                 <button class="accordion">Python, Rust, and Go Data Tool Packs ▼</button>
                 <div class="panel">
-                    <p>I'm working on Python, Rust and Go based data tool packs that enable data science and analytics professionals to access different platforms (e.g. Snowflake, RDS, AWS S3, Vault, Databricks) easily without all the setup. This initiative seeks to empower users with efficient and high-performance tools for data processing, analysis, and visualization.</p>
-                    <a href="https://github.com/ReadableCode/Data_Tool_Pack_Py">Python Repo</a><br>
-                    <a href="https://github.com/ReadableCode/Data_Tool_Pack_GO">Go Repo</a><br>
-                    <a href="https://github.com/ReadableCode/Data_Tool_Pack_RS">Rust Repo</a>
+                    <p>I'm working on Python, Rust and Go based data tool packs that enable data science and analytics
+                        professionals to access different platforms (e.g. Snowflake, RDS, AWS S3, Vault, Databricks)
+                        easily without all the setup. This initiative seeks to empower users with efficient and
+                        high-performance tools for data processing, analysis, and visualization.</p>
+                    <p><a href="https://github.com/ReadableCode/Data_Tool_Pack_Py">Python Repo</a><br></p>
+                    <p><a href="https://github.com/ReadableCode/Data_Tool_Pack_GO">Go Repo</a><br></p>
+                    <p><a href="https://github.com/ReadableCode/Data_Tool_Pack_RS">Rust Repo</a></p>
                 </div>
             </li>
             <li>
                 <button class="accordion">Terminal Based Kanban Board ▼</button>
                 <div class="panel">
-                    <p>I'm developing a terminal-based Kanban board that leverages Linux-like commands for manipulation. This project aims to streamline task management and enhance productivity by providing a seamless interface for organizing and tracking tasks.</p>
-                    <a href="https://github.com/ReadableCode/Terminal_To_Do">Check it out</a>
+                    <p>I'm developing a terminal-based Kanban board that leverages Linux-like commands for manipulation.
+                        This project aims to streamline task management and enhance productivity by providing a seamless
+                        interface for organizing and tracking tasks.</p>
+                    <p><strong>Stack:</strong></p>
+                    <ul>
+                        <li><strong>Frontend:</strong> Python-based TUI</li>
+                        <li><strong>Storage:</strong> Self-hosted S3-compatible (MinIO)</li>
+                        <li><strong>Hosting:</strong> Designed to run locally on Windows or Linux</li>
+                    </ul>
+                    <p><a href="https://github.com/ReadableCode/Terminal_To_Do">Check it out</a></p>
                 </div>
             </li>
             <li>
                 <button class="accordion">AI-Powered eBook Organizer (Offline-First) ▼</button>
                 <div class="panel">
-                    <p>A smart eBook renaming and organization tool that processes messy ebook folders and uses a local large language model
-                    (no internet or accounts required) to identify metadata like author, series, series order, and title. It restructures
-                    your library into a clean, nested format by author and series. Built for full local use, but easily swappable to OpenAI
-                    or other APIs if desired.</p>
-                    <a href="https://github.com/ReadableCode/Book-Bot">Check it out</a>
+                    <p>A smart eBook renaming and organization tool that processes messy ebook folders and uses a local
+                        large language model
+                        (no internet or accounts required) to identify metadata like author, series, series order, and
+                        title. It restructures
+                        your library into a clean, nested format by author and series. Built for full local use, but
+                        easily swappable to OpenAI
+                        or other APIs if desired.</p>
+                    <p><strong>Stack:</strong></p>
+                    <ul>
+                        <li><strong>Frontend:</strong> Python for the TUI</li>
+                        <li><strong>Storage:</strong> Self hosted PostgreSQL Database</li>
+                        <li><strong>Hosting:</strong> PostgresQL database running in Docker and exposed through
+                            TailScale</li>
+                    </ul>
+                    <p><a href="https://github.com/ReadableCode/Book-Bot">Check it out</a></p>
                 </div>
             </li>
             <li>
                 <button class="accordion">Dotfile Sync Application ▼</button>
                 <div class="panel">
-                    <p>My work involves creating a dotfile synchronization application. This tool empowers me to apply settings to
-                    non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. This will also pull configurations over SSH or SCP from devices that generally dont support symlinking into a git repo like my router and unraid server. The goal is to achieve a consistent experience across platforms.
+                    <p>My work involves creating a dotfile synchronization application. This tool empowers me to apply
+                        settings to
+                        non-configurable applications on mobile devices through AHK, Tasker, and iOS actions. This will
+                        also pull configurations over SSH or SCP from devices that generally dont support symlinking
+                        into a git repo like my router and unraid server. The goal is to achieve a consistent experience
+                        across platforms.
                     </p>
                     <a href="https://github.com/ReadableCode/dotfiles">Check it out</a>
                 </div>
@@ -136,21 +165,47 @@
             <li>
                 <button class="accordion">A Girl's Guide to Georgetown ▼</button>
                 <div class="panel">
-                    <p>This project provides high school students in Georgetown, Texas, with a structured backend while allowing them full creative control over the frontend. The backend, built in Go with Fiber, dynamically serves pages without requiring container rebuilds. It is deployed via Docker Compose on a Linux server, reverse-proxied through SWAG, and managed with Cloudflare and DuckDNS. Students handle the HTML, CSS, and JavaScript, ensuring they can iterate freely without backend constraints. This setup fosters student-led development while maintaining a stable and scalable foundation.</p>
-                    <a href="https://github.com/ReadableCode/a_girls_guide_to_georgetown">Check it out</a>
+                    <p>This project provides high school students in Georgetown, Texas, with a structured backend while
+                        allowing them full creative control over the frontend. The backend, built in Go with Fiber,
+                        dynamically serves pages without requiring container rebuilds. It is deployed via Docker Compose
+                        on a Linux server, reverse-proxied through SWAG, and managed with Cloudflare and DuckDNS.
+                        Students handle the HTML, CSS, and JavaScript, ensuring they can iterate freely without backend
+                        constraints. This setup fosters student-led development while maintaining a stable and scalable
+                        foundation.</p>
+                    <p><strong>Stack:</strong></p>
+                    <ul>
+                        <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
+                        <li><strong>Backend:</strong> Go with Fiber</li>
+                        <li><strong>Hosting:</strong> Self-hosted Kubernetes cluster (K3S)</li>
+                        <li><strong>Ingress:</strong> NGINX reverse proxy with SWAG in Docker-Compose</li>
+                    </ul>
+                    <p><a href="https://github.com/ReadableCode/a_girls_guide_to_georgetown">Check it out</a></p>
                 </div>
             </li>
             <li>
                 <button class="accordion">Sync Application for Removable Storage ▼</button>
                 <div class="panel">
-                    <p>I'm developing a synchronization application tailored for removable storage. This application ensures seamless syncing of sensitive directories, such as Git repositories, while handling line-ending conversions, local discovery, and sync change management. Additionally, I'm incorporating the option to symlink externally post-sync.</p>
-                    <a href="https://github.com/ReadableCode/Sync_Plex">Check it out</a>
+                    <p>I'm developing a synchronization application tailored for removable storage. This application
+                        ensures seamless syncing of sensitive directories, such as Git repositories, while handling
+                        line-ending conversions, local discovery, and sync change management. Additionally, I'm
+                        incorporating the option to symlink externally post-sync.</p>
+                    <p><strong>Stack:</strong></p>
+                    <ul>
+                        <li><strong>Frontend:</strong> Python for the TUI</li>
+                        <li><strong>Storage:</strong> Designed for local storage</li>
+                        <li><strong>Hosting:</strong> Built for local running in Windows or Linux for internal or
+                            attached storage (could include network maps)</li>
+                    </ul>
+                    <p><a href="https://github.com/ReadableCode/Sync_Plex">Check it out</a></p>
                 </div>
             </li>
             <li>
                 <button class="accordion">A 2D Game in Unity ▼</button>
                 <div class="panel">
-                    <p>I'm developing a 2D game with my wonderful wife using C# and the Unity engine. This project aims to showcase my creativity and programming skills while exploring the intricacies of game development. I'm excited to bring this vision to life and create an engaging gaming experience. This one is not open source yet.</p>
+                    <p>I'm developing a 2D game with my wonderful wife using C# and the Unity engine. This project aims
+                        to showcase my creativity and programming skills while exploring the intricacies of game
+                        development. I'm excited to bring this vision to life and create an engaging gaming experience.
+                        This one is not open source yet.</p>
                     <p>Not open source yet.</p>
                 </div>
             </li>
@@ -160,10 +215,13 @@
     <section id="collaborate">
         <h2>Collaboration and Engagement</h2>
         <p>
-            I'm enthusiastic about collaborating with fellow developers and enthusiasts on these projects. Whether you're interested
-            in contributing, have questions, or would like to explore potential synergies, please don't hesitate to reach out. Let's
+            I'm enthusiastic about collaborating with fellow developers and enthusiasts on these projects. Whether
+            you're interested
+            in contributing, have questions, or would like to explore potential synergies, please don't hesitate to
+            reach out. Let's
             join forces to drive innovation and create impactful solutions together.
-            Feel free to connect with me if you're intrigued by any of these initiatives. Your insights and contributions are highly
+            Feel free to connect with me if you're intrigued by any of these initiatives. Your insights and
+            contributions are highly
             valued!
         </p>
     </section>
